corrected header z-index, added hover effect to nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ header {
     position: fixed;
     width: 100%;
     top: 0;
+    z-index: 99;
 }
 
 header a {
@@ -35,14 +36,19 @@ header a {
     font-size: 18px;
 }
 
+header a:hover {
+    color: yellow;
+}
+
 header li {
     display: inline-block;
     margin: 0 50px;
 }
 
 main {
-    max-width: 1000px;
+    max-width: 800px;
     margin: 0 auto;
+    padding-top: 20px;
 }
 
 section {
@@ -69,14 +75,15 @@ Position Styling
 =========================================*/
 
 .hero {
-    width: 1000px;
+    width: 800px;
     position: relative;
     filter: brightness(0.8) blur(1px);
 }
 
 .logo {
+    width: 800px;
     position: absolute;
-    top: 20px;
+    top: 50px;
 }
 
 .right {
